[tool.poetry]
name = "base-env"
version = "0.1.0"
description = ""
authors = ["Alexander Junge <alexander.junge@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.3.2"
jupyterlab-code-formatter = "^1.4.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
